Test changing height to fix mobile Chrome issue -- https://stackoverflow.com/questions/52848856/100vh-height-when-address-bar-is-shown-chrome-mobile

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,8 @@
 
 html {
   position: relative;
-  min-height: 100%;
+  height: 100vh;
+  height: 100dvh;
 }
 
 body {
